remove pass through services